# NeOF_RTMPose_validation

./: .gitignore  README.md  environment.yml  pyproject.toml
src/: __init__.py  validate_rtmpose_triangulation.py
tests/: test_geometry.py
